<resources>
    <string name="app_name">Seç Pişir</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_label">Recipes</string>
    <string name="search_hint">Search Ingredient</string>
    <string name="search_placeholder">Search</string>
    <string-array name="dummy_ingredients">
        <item>havuc</item>
        <item>elma</item>
        <item>armut</item>
        <item>mandalina</item>
        <item>kiraz</item>
        <item>kereviz</item>
    </string-array>
    <string name="giris_yap">GİRİŞ YAP</string>
    <string name="isim">İsim</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="sifre">Şifre</string>
    <string name="misafir">MİSAFİR</string>
    <string name="kayit_ol">KAYIT OL</string>
    <string name="logo">Logo</string>
    <string name="favoriler">Favoriler</string>
    <string name="button">Buton</string>
    <string name="suggest_meal">Yemek Öner</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="karaliste">Kara Liste</string>
    <string name="tarif_ekle">Tarif Ekle</string>
    <string name="kategori">KATEGORi</string>
    <string name="rastgele">RASTGELE</string>
    <string name="malzeme_ile_ara">Malzeme ile Ara</string>
    <string name="gecmis">Geçmiş</string>
    <string name="bugunun_onerisi">Bu Günün Önerisi</string>
    <string name="so_an_k_p_k_p_k_k_kesip_ya_m_zda_pembele_inceye_kadar_kavuruyoruz_ard_ndan_i_f_st_m_z_ekleyip_onuda_kavuruyoruz_y_kad_m_z_pirin_leri_harca_ekleyip_tekrardan_kavuruyoruz_pirin_lerle_ayn_boyuta_gelecek_kadar_s_cak_suyumuzu_koyup_tuzumuzu_karabiberimizi_ve_ku_z_m_n_koyup_k_s_k_ate_te_kapa_n_kapat_p_suyunu_ekene_kadar_pi_iriyoruz_pi_en_pirin_lere_nane_ve_maydanozu_ekliyoruz_maydanozlar_ince_ince_kesilecek_ard_ndan_nceden_ha_lad_m_z_z_m_yapraklar_na_harc_koyup_tek_tek_sar_p_tenceremize_diziyoruz_ben_dizmeden_nce_tencerenin_dibini_z_m_yapra_yla_kapl_y_p_yle_dizmeye_ba_l_yorum_har_bitene_kadar_sarma_i_lemine_devam_ediyoruz_sarmalar_m_z_k_s_k_ate_e_koymadan_nce_bir_su_barda_kaynam_su_ve_yar_m_su_barda_zeytin_ya_m_z_ekleyip_pi_iriyoruz_ben_tencerenin_dibine_serdi_im_yapraklardan_dizme_i_lemi_bittikten_sonrada_st_n_kapatacak_ekilde_seriyorum_pi_en_dolmam_z_10_dakika_kapa_kapal_tencerede_dinlendirip_servise_haz_r_ediyoruz_afiyetler_olsun">Soğanı küp küp küçük kesip yağımızda pembeleşinceye kadar kavuruyoruz. Ardından iç fıstığımızı ekleyip onuda kavuruyoruz. Yıkadığımız pirinçleri harca ekleyip tekrardan kavuruyoruz. Pirinçlerle aynı boyuta gelecek kadar sıcak suyumuzu koyup, tuzumuzu, karabiberimizi ve kuş üzümünü koyup;kısık ateşte kapağını kapatıp suyunu çekene kadar pişiriyoruz. Pişen pirinçlere nane ve maydanozu ekliyoruz. (maydanozlar ince ince kesilecek) Ardından önceden haşladığımız üzüm yapraklarına harcı koyup tek tek sarıp tenceremize diziyoruz. Ben dizmeden önce tencerenin dibini üzüm yaprağıyla kaplıyıp öyle dizmeye başlıyorum. Harç bitene kadar sarma işlemine devam ediyoruz. Sarmalarımızı kısık ateşe koymadan önce, bir su bardağı kaynamış su ve yarım su bardağı zeytin yağımızı ekleyip pişiriyoruz. (ben tencerenin dibine serdiğim yapraklardan dizme işlemi bittikten sonrada üstünü kapatacak şekilde seriyorum) Pişen dolmamızı 10 dakika kapağı kapalı tencerede dinlendirip, servise hazır ediyoruz. afiyetler olsun</string>
    <string name="tamam">TAMAM</string>
    <string name="title_person_list">Items</string>
    <string name="title_person_detail">Person Detail</string>
    <string name="title_activity_tarifekle">Tarifekle</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="yemek_bulunamadi">Seçilen malzemelerden yemek bulunamadı.</string>
    <string name="bilgilerim">Bilgilerim</string>
    <string name="fazla_malzeme_secildi">Çok fazla malzeme seçmeye çalışıyorsunuz</string>
    <string name="zaten_var">Seçtiğiniz malzeme zaten arama listesinde</string>
</resources>
