<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/proje_arkaplan"
    tools:context=".LoginActivity"
    tools:layout_editor_absoluteY="73dp">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/logo"
                android:src="@mipmap/ic_launcher_round"
                tools:layout_editor_absoluteX="64dp"
                tools:layout_editor_absoluteY="0dp" />

            <android.widget.RelativeLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="245dp"

                android:background="@color/none"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="151dp">


                <EditText
                    android:id="@+id/edit_sifre"
                    android:layout_width="166dp"
                    android:layout_height="28dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="77dp"
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="@string/sifre"
                    android:inputType="textPersonName|textPassword"
                    android:selectAllOnFocus="true"
                    app:layout_constraintBottom_toTopOf="@+id/button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_sifre" />

                <EditText
                    android:id="@+id/edit_kullaniciadi"
                    android:layout_width="166dp"
                    android:layout_height="28dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="31dp"
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="Kullanıcı Adı"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toTopOf="@+id/edit_kullaniciadi"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="33dp">

                    <Button
                        android:id="@+id/button_giris_yap"
                        android:layout_width="146dp"
                        android:layout_height="35dp"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="30dp"
                        android:background="@drawable/ovalbuttonwhite"
                        android:onClick="girisButonu"
                        android:text="@string/giris_yap"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/button_giris_yap"
                        tools:layout_height="60dp"
                        tools:layout_width="110dp" />
                </LinearLayout>

            </android.widget.RelativeLayout>

            <Button
                android:id="@+id/button_misafir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/ovalbuttonwhite"
                android:onClick="onLoginButtonClick"
                android:padding="3dp"
                android:text="@string/misafir"
                tools:layout_editor_absoluteY="418dp" />

            <Button
                android:id="@+id/button_kayit_ol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/ovalbuttonwhite"
                android:onClick="onRegisterButtonClick"
                android:text="@string/kayit_ol"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="333dp" />

        </LinearLayout>
    </ScrollView>
</android.support.v4.widget.DrawerLayout>
