<?xml version="1.0" encoding="utf-8"?>

<!--android:background="#f93737"-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/deneme_arkaplan3"
    tools:context=".MainScreen"
    tools:layout_editor_absoluteY="73dp"
    android:id="@+id/drawerLayout">

    <!--
    <include
        android:id="@+id/tool_bar"
        layout="@layout/toolbar"
        android:gravity="center_vertical|start" /> -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <Button
        android:id="@+id/button5"
        android:layout_width="245dp"
        android:layout_height="73dp"

        android:layout_marginBottom="8dp"
        android:layout_marginTop="32dp"
        android:fontFamily="casual"
        android:text="@string/kategori"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:onClick="anaEkrandanKategorilere"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="245dp"
        android:layout_height="72dp"
        android:onClick="anaEkrandanRastgeleye"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="@string/rastgele"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

        <Button
            android:id="@+id/imageButton"
            android:layout_width="296dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:background="@drawable/gokkusakli_tabak"
            android:fontFamily="casual"
            android:onClick="anaEkrandanAramaya"
            android:text="@string/malzeme_ile_ara"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <!-- drawer layoutlar root ve navigation view sona ekleyince menü çalışıyor -->
    <!--
    <android.support.design.widget.NavigationView
        android:id="@+id/menuNavigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu"
        tools:context=".MenuYoneticisi">
    </android.support.design.widget.NavigationView> -->

</RelativeLayout>